fix broken style of swatch facet

--- a/src/styles/components/_hawk-swatch.scss
+++ b/src/styles/components/_hawk-swatch.scss
@@ -12,8 +12,8 @@
 
 	button.hawk-facet-rail__facet-btn.hawk-styleSwatch {
 		display: inline-block;
-		height: 36px;
-		width: 36px;
+		height: 38px;
+		width: 38px;
 		padding: 0;
 		margin: 2px;
 		text-align: center;
